# arema-ontology

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README  README.md  arema-ontology.ttl  docker-compose.yml  flake.nix  main.py  pyproject.toml  start.sh
docs/: .htaccess  404.html  562381d470ef334880ff2c2600a4e752576214fe-311ea48ddebb80d1708a.js  562381d470ef334880ff2c2600a4e752576214fe-311ea48ddebb80d1708a.js.map  562381d470ef334880ff2c2600a4e752576214fe-32bf2d80ff3ae7502bb6.js  562381d470ef334880ff2c2600a4e752576214fe-32bf2d80ff3ae7502bb6.js.map  562381d470ef334880ff2c2600a4e752576214fe-5a3629a6f1638d750745.js  562381d470ef334880ff2c2600a4e752576214fe-5a3629a6f1638d750745.js.map  562381d470ef334880ff2c2600a4e752576214fe-a0f042771a27c3b1f699.js  562381d470ef334880ff2c2600a4e752576214fe-a0f042771a27c3b1f699.js.map  AREMA.html  AREMA.json  AREMA.jsonld  AbsorptionCoefficientAt500hz.html  AbsorptionCoefficientAt500hz.json  AbsorptionCoefficientAt500hz.jsonld  Absorptioncoefficientat500Hz.html  Absorptioncoefficientat500Hz.json  Absorptioncoefficientat500Hz.jsonld  Acoustic.html  Acoustic.json  Acoustic.jsonld  ApartmentBuilding.html  ApartmentBuilding.json  ApartmentBuilding.jsonld  Architect.html  Architect.json  Architect.jsonld  AssociationProfessional.html  AssociationProfessional.jsonld  Balcony.html  Balcony.json  Balcony.jsonld  Brick.html  Brick.json  Brick.jsonld  Building.html  Building.json  Building.jsonld  BuildingMaterial.html  (+292 more)
fuseki/: docker-compose.yml
k8s/: arema-ontology-deployment.yaml  fuseki-configmap.yaml  fuseki-deployment.yaml  (+2 more)
(+984 files in other folders)
