[project]
name = "arema-ontology"
version = "0.1.0"
description = "Ontology tooling and docs generation for AREMA"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rdflib==7.1.4",
    "pyshacl==0.30.1",
    "pandas>=2.1.0",

]

[tool.uv]
resolver = "pip"
